--- a/gui/index.html
+++ b/gui/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TIS-AIDGA Driver Generator</title>
+    <title>TIS-Chiron Driver Generator</title>
   </head>
   <body>
     <div id="root"></div>
